# E3a_morpion_C

./: CMakeLists.txt  README.md
Console_Module/: board_view_console.c  board_view_console.h
GUI_Module/: board_view_GUI.c  player_manager_GUI.c
Makefiles/: Makefile_etape1_mock_CIRCLEWINS  Makefile_etape1_mock_CROSSWINS  Makefile_etape1_mock_DRAW  Makefile_etape2_scanf  Makefile_etape3_sdl  Makefile_test_tictactoe  Makefile_tictactoe  Makefile_tictactoe_GUI  Makefile_tictactoe_console  etape1_mock_CIRCLEWINS_exe  etape1_mock_CROSSWINS_exe  etape1_mock_DRAW_exe  etape2_scanf_exe  etape3_sdl_exe  tictactoe_GUI_exe  tictactoe_console_exe  tictactoe_exe
etape1/: board.c  board.h  board_view.h  board_view_text.c  game.c  game.h  main  main.c  player_manager.h  player_manager_mock.c  player_manager_scanf.c  test.c  tictactoe_errors.h  tictactoe_erros.c
etape1/doxygen/html/: board_8h.html  board_8h__dep__incl.dot  board_8h_source.html  board__view_8h.html  board__view_8h__incl.dot  board__view_8h_source.html  files.html  game_8h.html  game_8h_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  menudata.js  player__manager_8h.html  player__manager_8h_source.html  tictactoe__errors_8h.html  tictactoe__errors_8h_source.html
etape1/doxygen/html/search/: all_0.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  (+14 more)
etape2/: player_manager_scanf.c
etape3/: board_view_sdl.c  player_manager_sdl.c
src/: Doxyfile  board.c  board.h  board_view.c  board_view.h  game.c  game.h  main  main.c  player_manager.c  player_manager.h  tictactoe_errors.h  tictactoe_erros.c
src/doxygen/html/: board_8h.html  board_8h__dep__incl.dot  board_8h__incl.dot  board_8h_source.html  board__view_8h.html  board__view_8h__incl.dot  board__view_8h_source.html  doxygen.css  game_8h.html  game_8h__incl.dot  game_8h_source.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  player__manager_8h.html  player__manager_8h__incl.dot  player__manager_8h_source.html  tictactoe__errors_8h.html  tictactoe__errors_8h_source.html
test_tictactoe/: main  main.c  test  test.c  test_CheckEndOfGame.c  test_CheckEndOfGame.h
(+31 files in other folders)
